Added a JDK 16 profile with the appropriate add-opens.